testdata/cases/invalid/arg_error.mjs
import "./modules/wrong_arg.js"
